# OctaSplit

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  Info.plist.in  LICENSE  Makefile  MyScript.iss  README.md  build_release_linux.sh  build_release_macos.sh  build_release_windows.bat  clean.sh  clean_mswin.bat  cmake_install.cmake
OctaSplit_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
OctaSplit_artefacts/OctaSPlit.app/Contents/: Info.plist
Source/: AudioFileProperties.cpp  AudioFileProperties.h  Main.cpp  MainComponent.cpp  MainComponent.h  Misc.cpp  Misc.h  MyObjCWrapper.cpp  MyObjCWrapper.h  MyObjCWrapper.mm
icon/: MyIcon.icns
